force-app/main/default/objects/numm__CounterTrack__c/numm__CounterTrack__c.object-meta.xml
<CustomObject>
    <label>Compteur Track</label>
    <nameField>
        <displayFormat>Count-{00000}</displayFormat>
        <label>Nom de Counter Tr ack(Not to package yet</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compteur Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>