force-app/main/default/objects/numm__CounterTrack__c/fields/numm__Count__c.field-meta.xml
<CustomField>
    <fullName>numm__Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>