force-app/main/default/objects/numm__CounterTrack__c/fields/numm__Counter__c.field-meta.xml
<CustomField>
    <fullName>numm__Counter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compteur</label>
    <referenceTo>numm__Counter__c</referenceTo>
    <relationshipName>CounterTrack</relationshipName>
    <type>Lookup</type>
</CustomField>