force-app/main/default/objects/numm__CounterTrack__c/fields/numm__Prefix__c.field-meta.xml
<CustomField>
    <fullName>numm__Prefix__c</fullName>
    <label>Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>